--- a/activator.properties
+++ b/activator.properties
@@ -1,6 +1,6 @@
 #Activator properties file
 #Sat Jun 22 23:06:59 CEST 2013
-tags=Meta-Template
-name=sse-chat-template
+tags=SSE, Server Sent Events, Chat, AngularJS, Single Page Application
+name=matthiasn-sse-chat-template
 description=A template for a simple chat application using Server Sent Events.
-title=SSE Chat Template
+title=SSE Chat Template with AngularJS
