--- a/activator.properties
+++ b/activator.properties
@@ -1,6 +1,6 @@
 #Activator properties file
 #Sat Jun 22 23:06:59 CEST 2013
-tags=SSE, Server Sent Events, Chat, AngularJS, Single Page Application
+tags=SSE, Server_Sent_Event, Chat, AngularJS, SPA, Single_Page_Application
 name=matthiasn-sse-chat-template
 description=A template for a simple chat application using Server Sent Events.
 title=SSE Chat Template with AngularJS
