--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,3 +56,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+application.instanceID="sse-chat"
+elastic.URL="http://localhost:9200"
